--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"svelte": "^3.53.1",
 		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^4.10.7",
+		"svelte-spotify-web-playback": "^1.0.3",
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
